css/index.css
/* pilates vectors
https://photostockeditor.com/clip-art-vector/reformer-pilates */

html {
  scroll-behavior: smooth;
}

body {
  background-color: rgba(250, 246, 211, 0.55);
  margin: 0;
  overscroll-behavior: none; /*to keep body from bouncing left/right on safari*/
  font-family: "Handlee", "Indie Flower", "Trebuchet MS", "Lucida Sans Unicode",
    "Lucida Grande", "Lucida Sans", Arial, sans-serif;
}

main {
  margin: 0 0 0 0;
}

/*----- Main Section: My Photo and About Me text ------*/

.about-me {
  width: 95%;
  margin: 10% auto 0 auto;
  display: flex;
  justify-content: center;
  align-items: center;
}

.about-me-image {
  width: 55%;
}

.my-image {
  width: 80%;
  border-radius: 3%;
  margin: 0 2.5%;
}

.about-me-side {
  width: 45%;
  line-height: 2rem;
  font-size: 1.2em;
}

.about-me-side h1 {
  font-size: 1.5em;
  line-height: 120%;
  text-align: left;
}

.about-me-side p {
  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
    "Lucida Sans", Arial, sans-serif;
}

.about-me-text {
  width: 100%;
  text-align: left;
}

/*----- Main Section: Pilates system: 4 types / images ------*/

h2 {
  margin: 10% 0 0 2%;
}

.pilates-system {
  background-color: black;
  display: flex;
  justify-content: space-around;
  margin: 4em 0 17em 0;
}

.pilates-system > figure {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 10px;
  width: 20%;
}

.pilates-system > figure:active {
  font-size: 1.5rem;
  text-shadow: 2px 2px 30px whitesmoke;
}

.pilates-system > figure > img {
  width: 90%;
  border-radius: 50%;
}

.pilates-system > figure > img:hover {
  box-shadow: 1px 1px 60px whitesmoke;
}

.pilates-system > figure > img:active {
  transform: translateY(10px);
}

.pilates-system > figure > figcaption {
  text-align: center;
  color: aliceblue;
  margin: 4px;
}

.img-mat {
  position: relative;
  bottom: 30px;
}

.img-mat:hover {
  font-size: 1.3rem;
  transform: rotateX(10deg);
  transform: rotateY(-5deg);
  transform: rotateZ(333deg);
}

.img-mat-props {
  position: relative;
  top: 130px;
}

.img-mat-props:hover {
  font-size: 1.3rem;
  transform: rotateX(-20deg);
  transform: rotateY(-15deg);
  transform: rotateZ(15deg);
}

.img-reformer {
  position: relative;
  top: 35px;
}

.img-reformer:hover {
  font-size: 1.3rem;
  transform: rotateX(-10deg);
  transform: rotateY(25deg);
  transform: rotateZ(350deg);
}

.img-aerial {
  position: relative;
  bottom: 100px;
}

.img-aerial:hover {
  font-size: 1.3rem;
  transform: rotateX(30deg);
  transform: rotateY(25deg);
  transform: rotateZ(33deg);
}

figcaption {
  visibility: hidden;
}
figure:hover > figcaption {
  visibility: visible;
}

/*----- Main Section: My Videos ------*/

.my-videos {
  color: rgba(250, 246, 211, 1);
}

.my-videos-block {
  display: flex;
  justify-content: space-evenly;
  margin: 4em 0 17em 0;
}

.my-video-item {
  display: flex;
  width: 33%;
  max-width: 300px;
  flex-direction: column;
  align-items: center;
  background-color: black;
  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
}

.my-video-item:hover {
  border: solid 4px black;
  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
}

.my-video-item iframe {
  height: 300px;
  color: rgba(250, 246, 211, 1);
}

.my-videos h2 {
  margin: 2%;
  color: black;
}

.my-videos-block span {
  font-size: 1.5rem;
  text-align: center;
}

/* -----> Media Queries <----- */

@media (max-width: 1200px) {
  h2 {
    font-size: 1.9rem;
    margin: 10% 0 0 4%;
  }

  .about-me {
    flex-direction: column;
    align-items: center;
    width: 100%;
    margin: 8% 0 0 0;
  }

  .about-me-image {
    width: 65%;
  }

  .my-image {
    width: 100%;
    border-radius: 3%;
  }

  .about-me-side {
    width: 65%;
    line-height: 1.5rem;
    font-size: 1.5em;
  }

  .about-me-side h1 {
    font-size: 1.9rem;
    line-height: 1.5;
    margin: 5rem 0 1em 0;
  }
}
.about-me-side p {
  line-height: 1.5;
}

.about-me-text {
  text-align: left;
}

.my-videos h2 {
  margin: 2% 0 0 4%;
}

@media (max-width: 992px) {
  h2 {
    text-align: center;
  }

  .about-me {
    margin: 10% auto 15% auto;
  }

  .pilates-system {
    margin: 4em 0 17em 0;
  }

  .my-videos-block {
    flex-direction: column;
    align-items: center;
    margin: 4em 0 8em 0;
  }

  .my-video-item {
    width: 80%;
    max-width: none;
    flex-direction: column;
    align-items: stretch;
    margin: 0 5% 12% 5%;
  }

  .my-videos h2 {
    text-align: center;
    margin: 2% 0 0 4%;
  }
}

@media (max-width: 768px) {

  h2 {
    margin: 12% 0 0 4%;
  }

  .about-me {
    margin: 12% 0 0 0;
  }

  .pilates-system {
    margin: 4em 0 15em 0;
  }

  .img-mat {
    position: relative;
    bottom: 30px;
  }

  .img-mat-props {
    position: relative;
    top: 100px;
  }

  .img-reformer {
    position: relative;
    top: 5px;
  }

  .img-aerial {
    position: relative;
    bottom: 80px;
  }

  .my-videos-block span {
    font-size: 1.3rem;
  }

  .my-video-item {
    width: 80%;
  }
}

@media (max-width: 600px) {

  h2 {
    margin: 25% 0 0 4%;
  }

  .about-me {
    margin: 17% 0 0 0;
  }

  .about-me-image {
  width: 80%;
  }

  .pilates-system {
    flex-direction: column;
    align-items: stretch;
    margin: 4em 0 12em 0;
  }

  .pilates-system > figure {
    width: 35%;
  }

  .img-mat {
    align-self: flex-start;
    left: 15px;
    bottom: 30px;
  }

  .img-mat-props {
    align-self: center;
    top: -90px;
    right: 0px;
    left: 65px;
  }

  .img-reformer {
    align-self: flex-end;
    top: -53px;
    left: 0px;
  }

  .img-aerial {
    align-self: center;
    bottom: 65px;
    right: 75px;
  }

  .my-video-item {
    margin: 0 5% 15% 5%;
  }


  .my-videos-block span {
    font-size: 1.2rem;
  }
}

@media (max-width: 425px) {

  h2 {
    margin: 30% 0 0 4%;
  }

  .about-me-image {
    width: 80%;
  }

  .my-image {
    width: 100%;
    border-radius: 3%;
  }

  .about-me-side {
    width: 80%;
    line-height: 1.5rem;
    font-size: 1.4em;
  }

  .about-me-side h1 {
    font-size: 1.8rem;
  }

  .about-me-text {
    text-align: left;
  }

  .pilates-system > figure {
    width: 50%;
  }

  .pilates-system > figure {
    font-size: 1.2rem;
  }

  .pilates-system > figure:active {
    font-size: 1.7rem;
  }

  .img-mat {
    align-self: flex-start;
    left: 15px;
    bottom: 30px;
  }

  .img-mat-props {
    align-self: center;
    top: -25px;
    right: 0px;
    left: 65px;
  }

  .img-reformer {
    align-self: flex-end;
    top: -30px;
    left: -140px;
  }

  .img-aerial {
    align-self: center;
    bottom: 10px;
    right: -70px;
  }
}

